--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
         <ul>
+          <li>This is another item.</li>
           <li><a href="https://github.com/DaOnlyDominic/testing/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/DaOnlyDominic/testing/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/DaOnlyDominic/testing">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
