--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Testing</h1>
-        <p></p>
+        <h1>This website should make no sence.</h1>
+        <p>Puppies Rock!!!!!</p>
 
         <p class="view"><a href="https://github.com/DaOnlyDominic/testing">View the Project on GitHub <small>DaOnlyDominic/testing</small></a></p>
 
 
         <ul>
-          <li>This is another item.</li>
-          <li><a href="https://github.com/DaOnlyDominic/testing/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li>Hey-Hey-Hey!!!</li>
+          <li><a href="https://i.ytimg.com/vi/6X5VpO8XITE/maxresdefault.jpg"><strong>PUPPIES</strong></a></li>
           <li><a href="https://github.com/DaOnlyDominic/testing">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
