--- a/javascript.htm
+++ b/javascript.htm
@@ -1,8 +1,8 @@
 <html>
   <script>
     function doTheThing(form) {
-      var a = form.a.value;
-      var b = form.b.value;
+      var a = parseInt(form.a.value);
+      var b = parseInt(form.b.value);
       
       form.answer.value = a + b;
       return false;
