--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <header>Super Duper Looper Shooper Ooper Booper Chooper Quadrooper!!!!!</header>
       </div>
       <div class="HuH"
-        <p>(note: this is just an experiment!!)</p>
         <a href="https://i.ytimg.com/vi/k-VhC0V59dM/maxresdefault.jpg"><img source = "https://s-media-cache-ak0.pinimg.com/736x/c2/9c/56/c29c56f7be6d4908abd353b3a885c901.jpg"></a>
+      </div>
     </body>
 </html>
 
