--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 			x = prompt("What is the password?")
 			if (x === 'XDXDXD') {
 				confirm("Welcome to TAN mode. Press OK to start.")
+				window.open("SUPREMEGAMESTASH12345678912345678919972005.html")
 			} else {
 				alert("WRONG!!!")
 			}
-			window.open("TanMode.html")
 		}
 	</script>
 	<body>
