--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				confirm("You have now entered Admin mode")
 				window.open("AdminMode.html")
 			} else {
-				alert("WRONG!!!')
+				alert("WRONG!!!")
 				window.close()
 			}
 		}
