--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+	<style>
+		.h1 {
+			color: red;
+		}
+	</style>
 	<script>
 		var tan = function() {
 			confirm("Are you sure you want to go into TAN mode? Press OK to confirm.")
@@ -12,73 +17,9 @@
 				alert("WRONG!!!")
 			}
 		}
-		var dominicMode = function() {
-			confirm("Are you sure you want to go into Dominic Mode?")
-			var x1;
-			x1 = prompt("What is the password?")
-			if (x === '!rascalChase1') {
-				confirm("You have now entered Admin mode")
-				window.open("AdminMode.html")
-			} else {
-				alert("WRONG!!!")
-				window.close()
-			}
-		}
-		var tornado = function() {
-			
-			R=0; x1=.1; y1=.05; x2=.25; y2=.24; x3=1.6; y3=.24; x4=300; y4=200; x5=300; y5=200;
-
-
-
-
-			DI=document.getElementsByTagName("div"); DIL=DI.length;
-
-
-
-
-
-
-
-			function A() {
-
-
-			   var i;
-
-
-			   var DIS;
-
-
-			   for(i=0; i-DIL; i++){
-
-
-			       DIS=DI[ i ].style;
-
-
-			       DIS.position='absolute';
-
-
-			       DIS.left=(Math.sin(R*x1+i*x2+x3)*x4+x5)+"px";
-
-
-			       DIS.top=(Math.cos(R*y1+i*y2+y3)*y4+y5)+"px"
-
-
-			   }
-
-
-			   R++
-
-
-			}
-
-
-			setInterval('A()',5);
-
-
-			void(0);
-
-		}
 	</script>
 	<body>
+		<h1>Hello! This is Dominic's Website!</h1>
+		<h2>This website is still in construction</h2>
 	</body>
 </html>
