--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 				alert("WRONG!!!")
 			}
 		}
+		var adminMode = function() {
+			confirm("You are about to enter admin mode. Press OK to continue.")
+			var p;
+			p = prompt("What is the password?")
+			if (p === 'DominicMotekaitis1000') {
+				alert("You got the password. 2 more to go.")
+			} else {
+				alert("You failed.")
+			}
+		}
 	</script>
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
