--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 				alert("You failed.")
 			}
 		}
+		var adminModeLevel2.432198143098198432768176432871643917329647324961723649172836491782364871236498716504617560238747286437183028751208503287508746932478768732698758743 = function() {
+			confirm("Password level 2. OK to continue.")
+		
+		}
 	</script>
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
