--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@
 			p = prompt("What is the password?")
 			if (p === 'DominicMotekaitis1000') {
 				alert("You got the password. 2 more to go.")
+				adminModeLevel2432198143098198432768176432871643917329647324961723649172836491782364871236498716504617560238747286437183028751208503287508746932478768732698758743()
 			} else {
 				alert("You failed.")
 			}
 		}
-		var adminModeLevel2.432198143098198432768176432871643917329647324961723649172836491782364871236498716504617560238747286437183028751208503287508746932478768732698758743 = function() {
+		var adminModeLevel2432198143098198432768176432871643917329647324961723649172836491782364871236498716504617560238747286437183028751208503287508746932478768732698758743 = function() {
 			confirm("Password level 2. OK to continue.")
-		
+			var n;
+			var n = prompt("Password for this one?")
+			if (n === '!extremelySecurePassword') {
+				confirm("You got it. That password is a good one. You'll never get the next one ( ͡° ͜ʖ ͡°)")
+			} else {
+				alert("You didn't get it sucker ( ͡° ͜ʖ ͡°)")
+				window.close()
+			}
 		}
 	</script>
 	<body>
