--- a/index.html
+++ b/index.html
@@ -33,12 +33,24 @@
 			var n;
 			var n = prompt("Password for this one?")
 			if (n === '!extremelySecurePassword') {
-				confirm("You got it. That password is a good one. You'll never get the next one ( ͡° ͜ʖ ͡°)")
+				confirm("You got it. That password is a good one. You'll never get the next one                                                                                                                                 ( ͡° ͜ʖ ͡°)")
+				adminModeLevel24321981430981984327681764328716439173296473249617236491728364917823648712364987165046175602387472864371830287512085032875087469324787687326987587432()
 			} else {
 				alert("You didn't get it sucker ( ͡° ͜ʖ ͡°)")
 				window.close()
 			}
 		}
+		var adminModeLevel24321981430981984327681764328716439173296473249617236491728364917823648712364987165046175602387472864371830287512085032875087469324787687326987587432 = function() {
+			confirm("Password level 3. Click dat OK to continue.")
+			var o;
+			var o = prompt("I bet you don't have the password for this one.")
+			if (n === '!whEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE123') {
+				confirm("You got it. That password wuz a good one. You are now in admin mode.)                                                                                                                                 ( ͡° ͜ʖ ͡°)")
+			} else {
+				alert("You didn't get it!! ( ͡° ͜ʖ ͡°) I'm surprised you got this far.")
+			}
+		}
+		
 	</script>
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
