--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 				alert("You didn't get it!! ( ͡° ͜ʖ ͡°) I'm surprised you got this far.")
 			}
 		}
-		
+		var account1;
+		var account1 = prompt("U got a password?")
+		account1
 	</script>
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
