--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
 		<h2>This website is still in construction</h2>
+		<img src = "https://drive.google.com/file/d/1wdSa_rwRc7y6IP3F6o6oqB-vF-WgM1JYIw/view?usp=sharing">
 	</body>
 </html>
