--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
 		<h2>This website is still in construction</h2>
-		<img src = "https://user-images.githubusercontent.com/17837905/34133097-98e43300-e418-11e7-9d16-2eb89f35204a.JPG">
+		<iframe src="https://www.w3schools.com">
+  			<p>Your browser does not support iframes.</p>
+		</iframe>
 	</body>
 </html>
