--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
 		<h2>This website is still in construction</h2>
-		<iframe src="https://app.whooosreading.org">
+		<iframe src="https://app.whooosreading.org" height="7500" width="5000px">
   			<p>Your browser does not support iframes.</p>
 		</iframe>
 	</body>
