--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
 		<h2>This website is still in construction</h2>
-		<iframe src="github.com" height="5000px" width="2500px" name="iframe2">
+		<iframe src="htp://github.com" height="5000px" width="2500px">
   			<p>Your browser does not support iframes.</p>
 		</iframe>
 		
