--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			confirm("Password level 3. Click dat OK to continue.")
 			var o;
 			var o = prompt("I bet you don't have the password for this one.")
-			if (n === '!whEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE123') {
+			if (o === '!whEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE123') {
 				confirm("You got it. That password wuz a good one. You are now in admin mode.)                                                                                                                                 ( ͡° ͜ʖ ͡°)")
 			} else {
 				alert("You didn't get it!! ( ͡° ͜ʖ ͡°) I'm surprised you got this far.")
@@ -57,6 +57,8 @@
 		var account1 = prompt("U got a password?")
 		account1
 	</script>
+	<head>
+	</head>
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
 		<h2>This website is still in construction</h2>
