--- a/index.html
+++ b/index.html
@@ -58,7 +58,65 @@
 	<body>
 		<h1>Hello! This is Dominic's Website!</h1>
 		<h2>This website is still in construction</h2>
-	<p>Hi</p>
+	<p>// ==UserScript==
+// @name        GoToSite
+// @description Quickly go to any website by putting in the address
+// @include     *
+// @version     1
+// @grant       none
+// ==/UserScript==
+
+var allowedKeys = {
+  37: 'left',
+  38: 'up',
+  39: 'right',
+  40: 'down',
+  65: 'a',
+  66: 'b'
+};
+
+// the 'official' Konami Code sequence
+var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
+
+// a variable to remember the 'position' the user has reached so far.
+var konamiCodePosition = 0;
+
+// add keydown event listener
+document.addEventListener('keydown', function(e) {
+  // get the value of the key code from the key map
+  var key = allowedKeys[e.keyCode];
+  // get the value of the required key from the konami code
+  var requiredKey = konamiCode[konamiCodePosition];
+
+  // compare the key with the required key
+  if (key == requiredKey) {
+
+    // move to the next key in the konami code sequence
+    konamiCodePosition++;
+
+    // if the last key is reached, activate cheats
+    if (konamiCodePosition == konamiCode.length) {
+      activateCheats();
+      konamiCodePosition = 0;
+    }
+  } else {
+    konamiCodePosition = 0;
+  }
+});
+
+function activateCheats() {
+  document.body.style.backgroundColor = "green";
+    alert("You've activated the Konami code!")
+
+  var X;
+    X = prompt("Put in any web address")
+    if(X === "") {
+        return
+    } else {
+        window.open(X)
+    }
+    confirm("You're computer has a virus!")
+}</p>
 		
 	</body>
 </html>
