--- a/index.html
+++ b/index.html
@@ -1,58 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<style>
-	</style>
-	<script>
-		var tan = function() {
-			confirm("Are you sure you want to go into TAN mode? Press OK to confirm.")
-			var x;
-			x = prompt("What is the password?")
-			if (x === 'XDXDXD') {
-				confirm("Welcome to TAN mode. Press OK to start.")
-				window.open("TanMode.html")
-			} else {
-				alert("WRONG!!!")
-			}
-		}
-		var adminModeLogin = functcion() {
-			var adminMode = function() {
-				confirm("You are about to enter admin mode. Press OK to continue.")
-				var p;
-				p = prompt("What is the password?")
-				if (p === 'DominicMotekaitis1000') {
-					alert("You got the password. 2 more to go.")
-					adminModeLevel2432198143098198432768176432871643917329647324961723649172836491782364871236498716504617560238747286437183028751208503287508746932478768732698758743()
-				} else {
-					alert("You failed.")
-				}
-			}
-			var adminModeLevel2432198143098198432768176432871643917329647324961723649172836491782364871236498716504617560238747286437183028751208503287508746932478768732698758743 = function() {
-				confirm("Password level 2. OK to continue.")
-				var n;
-				var n = prompt("Password for this one?")
-				if (n === '!extremelySecurePassword') {
-					confirm("You got it. That password is a good one. You'll never get the next one                                                                                                                                 ( ͡° ͜ʖ ͡°)")
-					adminModeLevel24321981430981984327681764328716439173296473249617236491728364917823648712364987165046175602387472864371830287512085032875087469324787687326987587432()
-				} else {
-					alert("You didn't get it sucker ( ͡° ͜ʖ ͡°)")
-					window.close()
-				}
-			}
-			var adminModeLevel24321981430981984327681764328716439173296473249617236491728364917823648712364987165046175602387472864371830287512085032875087469324787687326987587432 = function() {
-				confirm("Password level 3. Click dat OK to continue.")
-				var o;
-				var o = prompt("I bet you don't have the password for this one.")
-				if (o === '!whEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE123') {
-					confirm("You got it. That password wuz a good one. You are now in admin mode.)                                                                                                                                 ( ͡° ͜ʖ ͡°)")
-				} else {
-					alert("You didn't get it!! ( ͡° ͜ʖ ͡°) I'm surprised you got this far.")
-				}
-			}
-		}
-		var account1;
-		var account1 = prompt("U got a password?")
-		account1
+	<script src="daonlydominic.github.io/DominicWebsite/script.js">
 	</script>
+	<link rel="stylesheet" type="text/css" href="daonlydominic.github.io/DominicWebsite/style.css">
 	<head>
 	</head>
 	<body>
