--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<script src="daonlydominic.github.io/DominicWebsite/script.js">
-	</script>
-	<link rel="stylesheet" type="text/css" href="daonlydominic.github.io/DominicWebsite/style.css">
-	  <head>
-    		<title>Welcome! | Dominic's Website</title>
+	<head>
+		<script src="daonlydominic.github.io/DominicWebsite/script.js">
+		</script>
+			.imagetext {
+				  font-family: impact;
+				  color: #000000;
+				  text-transform: uppercase;
+				  background-image: url("daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
+				}
+				.center {
+				  text-align: center;
+				}
+		<title>Welcome! | Dominic's Website</title>
  	  </head>
 	  <body>
 	    <p class="imagetext">Welcome to my website</p>
