--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 	<head>
 		<script src="daonlydominic.github.io/DominicWebsite/script.js">
 		</script>
-			.imagetext {
-				  font-family: impact;
-				  color: #000000;
-				  text-transform: uppercase;
-				  background-image: url("daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
-				}
-				.center {
-				  text-align: center;
-				}
+			<style>
+				.imagetext {
+					  font-family: impact;
+					  color: #000000;
+					  text-transform: uppercase;
+					  background-image: url("daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
+					}
+					.center {
+					  text-align: center;
+					}
+			</style>
 		<title>Welcome! | Dominic's Website</title>
  	  </head>
 	  <body>
