--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<style>
 			.imagetext {
 				  font-family: impact;
-				  color: #000000;
+				  color: #FFFFFF;
 				  text-transform: uppercase;
-				  background-image: url("daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
+				  background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
 				}
 				.center {
 				  text-align: center;
