--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 				  font-family: impact;
 				  color: #FFFFFF;
 				  text-transform: uppercase;
-				  background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
 				}
 				.center {
 				  text-align: center;
 				}
-
+			body {
+				background-color: rgb(0,0,0)
+			}
 			<title>Welcome! | Dominic's Website</title>
 			<body>
-			    <p class="imagetext">Welcome to my website</p>
+			    <p class="imagetext center">Welcome to my website</p>
 			  </body>
 		</style>
 </html>
