--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 				  text-align: center;
 				}
 			body {
-				background-color: rgb(0,0,0)
+				background-color: #000000
 			}
 			<title>Welcome! | Dominic's Website</title>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
-			  </body>
+			</body>
 		</style>
 </html>
