--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<script src="daonlydominic.github.io/DominicWebsite/script.js">
-	</script>
-		<style>
-			.imagetext {
-				  font-family: impact;
-				  color: #FFFFFF;
-				  text-transform: uppercase;
+	<head>
+		<title>Welcome! | Dominic's Website</title>
+		<script src="daonlydominic.github.io/DominicWebsite/script.js">
+		</script>
+			<style>
+				.imagetext {
+					  font-family: impact;
+					  color: #FFFFFF;
+					  text-transform: uppercase;
+					}
+					.center {
+					  text-align: center;
+					}
+				body {
+					background-color: #000000
 				}
-				.center {
-				  text-align: center;
-				}
-			body {
-				background-color: #000000
-			}
-			<title>Welcome! | Dominic's Website</title>
+	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
 			</body>
