--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		</script>
 			<style>
 				.imagetext {
-					  font-family: impact;
+					  /*font-family: impact;*/
 					  color: #FFFFFF;
 					  text-transform: uppercase;
 					}
