--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			<style>
 				.imagetext {
 					  /*font-family: impact;*/
-					  color: #FFFFFF;
+					  color: rgb(255, 255, 255);
 					  text-transform: uppercase;
 					}
 					.center {
