--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		</script>
 			<style>
 				.imagetext {
-					  /*font-family: impact;*/
+					  font-family: impact;
 					  color: rgb(255, 255, 255);
 					  text-transform: uppercase;
 					}
@@ -14,7 +14,7 @@
 					  text-align: center;
 					}
 				body {
-					background-color: #000000
+					background-color: blue;
 				}
 	</head>
 			<body>
