--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 					  font-family: impact;
 					  color: rgb(255, 255, 255);
 					  text-transform: uppercase;
+						background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
 					}
 					.center {
 					  text-align: center;
 					}
 				body {
-					background-color: blue;
+					background-color: black;
 				}
 			</style>
 				<title>Welcome! | Dominic's Website</title>
