--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 					  font-family: impact;
 					  color: rgb(255, 255, 255);
 					  text-transform: uppercase;
-						background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
+					  background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
+					  padding: 10px 20px;
 					}
 					.center {
 					  text-align: center;
