--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 					  color: rgb(255, 255, 255);
 					  text-transform: uppercase;
 					  background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
-					  padding: 10px 20px;
 					}
 					.center {
-					  text-align: center;
+					  text-align: center;Å
 					}
 				body {
 					background-color: black;
@@ -22,5 +21,8 @@
 	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
+			    <p class="center">█▀▀█ █▀▀█ █▀▀█ █▀▀▄ █░░█ █▀▀ ▀▀█▀▀ █▀▀ ▄
+█░░█ █▄▄▀ █░░█ █░░█ █░░█ █░░ ░░█░░ ▀▀█ ░
+█▀▀▀ ▀░▀▀ ▀▀▀▀ ▀▀▀░ ░▀▀▀ ▀▀▀ ░░▀░░ ▀▀▀ ▀</p>
 			</body>
 </html>
