--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 			<style>
 				.imagetext {
 					  font-family: impact;
+					  font-size: 100px;
 					  color: rgb(255, 255, 255);
 					  text-transform: uppercase;
 					  background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
 					}
-					.center {
-					  text-align: center;Å
-					}
+				.center {
+				  text-align: center;
+				}
 				body {
 					background-color: black;
 				}
+				
 			</style>
 				<title>Welcome! | Dominic's Website</title>
 	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
-			    <p class="center">█▀▀█ █▀▀█ █▀▀█ █▀▀▄ █░░█ █▀▀ ▀▀█▀▀ █▀▀ ▄
-█░░█ █▄▄▀ █░░█ █░░█ █░░█ █░░ ░░█░░ ▀▀█ ░
-█▀▀▀ ▀░▀▀ ▀▀▀▀ ▀▀▀░ ░▀▀▀ ▀▀▀ ░░▀░░ ▀▀▀ ▀</p>
+			    <p class="center">Products</p>
 			</body>
 </html>
