--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 				body {
 					background-color: black;
 				}
-				
+				.text-fix {
+					color: rgb(255, 255, 255);
+					font-family: "Apple-Chancery";
+				}
 			</style>
 				<title>Welcome! | Dominic's Website</title>
 	</head>
