--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
-			    <p class="center">Products</p>
+			    <p class="center text-fix">Products</p>
 			</body>
 </html>
