--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 					color: rgb(255, 255, 255);
 					font-family: "Apple-Chancery";
 				}
+				a {
+					text-decoration: none;
+				}
 			</style>
 				<title>Welcome! | Dominic's Website</title>
 	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
-			    <p class="center text-fix">Products</p>
+			    <a href="https://daonlydominic.github.io/DominicWebsite/cats" class="center text-fix">Cat Pictures</a>
 			</body>
 </html>
