--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 				}
 				.text-fix {
 					color: rgb(255, 255, 255);
-					font-family: "Apple-Chancery";
 				}
 				a {
 					text-decoration: none;
+					color: #00bfff;
 				}
 			</style>
 				<title>Welcome! | Dominic's Website</title>
 	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
-			    <a href="https://daonlydominic.github.io/DominicWebsite/cats" class="center text-fix">Cat Pictures</a>
+			    <a href="https://daonlydominic.github.io/DominicWebsite/cats.html" class="center text-fix">Cat Pictures</a>
 			</body>
 </html>
