--- a/index.html
+++ b/index.html
@@ -3,32 +3,137 @@
 	<head>
 		<script src="daonlydominic.github.io/DominicWebsite/script.js">
 		</script>
-			<style>
-				.imagetext {
-					  font-family: impact;
-					  font-size: 100px;
-					  color: rgb(255, 255, 255);
-					  text-transform: uppercase;
-					  background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
-					}
-				.center {
-				  text-align: center;
+		<link rel>
+		<style>
+			.imagetext {
+				  font-family: impact;
+				  font-size: 100px;
+				  color: rgb(255, 255, 255);
+				  text-transform: uppercase;
+				  background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
 				}
-				body {
-					background-color: black;
-				}
-				.text-fix {
-					color: rgb(255, 255, 255);
-				}
-				a {
-					text-decoration: none;
-					color: #00bfff;
-				}
-			</style>
+			.center {
+			  text-align: center;
+			}
+			body {
+				background-color: black;
+			}
+			.text-fix {
+				color: rgb(255, 255, 255);
+			}
+			a {
+				text-decoration: none;
+				color: #00bfff;
+			}
+		</style>
 				<title>Welcome! | Dominic's Website</title>
 	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
 			    <a href="https://daonlydominic.github.io/DominicWebsite/cats.html" class="center text-fix">Cat Pictures</a>
+			    <button id="button">start</button>
+
+			    <div class="b">
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			      <b></b>
+			    </div>
 			</body>
 </html>
