--- a/index.html
+++ b/index.html
@@ -31,109 +31,6 @@
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
 			    <a href="https://daonlydominic.github.io/DominicWebsite/cats.html" class="center text-fix">Cat Pictures</a>
-			    <button id="button">start</button>
-
-			    <div class="b">
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			      <b></b>
-			    </div>
+			    <iframe src='https://minnit.chat/DominicsWebsiteChat?embed&' width='1000' height='500' style='border:none;' allowTransparency='true'></iframe><br>
 			</body>
 </html>
