--- a/espressobusiness.html
+++ b/espressobusiness.html
@@ -19,4 +19,5 @@
 </head>
 <body>
   <h1 class="center font1">Dominic's Espresso Business</h1>
+  <p style="color: white;">Nuttin here yet!</p>
 </body>
